--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             setInterval(updateTime, 1000);
         </script>
 
-        <h1 class="logo"><img src="/icon/tollanis-logo.png" alt="Tallanis"></h1>
+        <h1 class="logo"><img src="icon/tollanis-logo.png" alt="Tallanis"></h1>
         <span><a href="#" class="btn-s black-s">Logout</a></span>
     </header>
 
