Suppliers Meal Plan Search

--- a/index.html
+++ b/index.html
@@ -3581,9 +3581,9 @@
                                 <td>admin</td>
                                 <td>01/07/2023 09:06:07 PM</td>
                                 <td>admin</td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>BB</td>
@@ -3594,9 +3594,9 @@
                                 <td>admin</td>
                                 <td>16/12/2021 11:59:38 AM</td>
                                 <td>admin</td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>Enhance Meal</td>
@@ -3607,9 +3607,9 @@
                                 <td>naveena</td>
                                 <td>11/09/2023 12:12:48 PM</td>
                                 <td>naveena</td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>Enhance Meal FB</td>
@@ -3620,9 +3620,9 @@
                                 <td>naveena</td>
                                 <td></td>
                                 <td></td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>Enhance Meal HB</td>
@@ -3633,9 +3633,9 @@
                                 <td>naveena</td>
                                 <td></td>
                                 <td></td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>Extra bed FB</td>
@@ -3646,9 +3646,9 @@
                                 <td>naveena</td>
                                 <td></td>
                                 <td></td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>FB</td>
@@ -3659,9 +3659,9 @@
                                 <td>admin</td>
                                 <td>01/07/2023 09:05:37 PM</td>
                                 <td>admin</td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>HB</td>
@@ -3672,9 +3672,9 @@
                                 <td>admin</td>
                                 <td>16/12/2021 12:00:03 PM</td>
                                 <td>admin</td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>HB DBL</td>
@@ -3685,9 +3685,9 @@
                                 <td>Neveena</td>
                                 <td></td>
                                 <td></td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>HB SGL</td>
@@ -3698,9 +3698,9 @@
                                 <td>Neveena</td>
                                 <td></td>
                                 <td></td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>HB-(D)</td>
@@ -3711,9 +3711,9 @@
                                 <td>admin</td>
                                 <td>01/07/2023 09:05:58 PM</td>
                                 <td>admin</td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>HB-(L)</td>
@@ -3724,9 +3724,9 @@
                                 <td>admin</td>
                                 <td>01/07/2023 09:05:51 PM</td>
                                 <td>admin</td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>RO</td>
@@ -3737,9 +3737,9 @@
                                 <td>admin</td>
                                 <td>16/12/2021 12:02:04 PM</td>
                                 <td>admin</td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>RO DBL</td>
@@ -3750,9 +3750,9 @@
                                 <td>naveena</td>
                                 <td></td>
                                 <td></td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>RO SGL</td>
@@ -3763,9 +3763,9 @@
                                 <td>naveena</td>
                                 <td></td>
                                 <td></td>
-                                <td><a href="#">Edit</a></td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Delete</a></td>
+                                <td class="action-links"><a href="#">Edit</a></td>
+                                <td class="action-links"><a href="#">View</a></td>
+                                <td class="action-links"><a href="#">Delete</a></td>
                             </tr>
                         </tbody>
                     </table>
